--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -13,7 +13,7 @@ const { t } = useI18n('en');
   description={t.siteDescription}
   lang="en"
 >
-  <main>
+  <main id="main-content">
     <Hero lang="en" />
     <Projects lang="en" />
     <Footer lang="en" />
