--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ const { t } = useI18n('es');
   description={t.siteDescription}
   lang="es"
 >
-  <main>
+  <main id="main-content">
     <Hero lang="es" />
     <Projects lang="es" />
     <Footer lang="es" />
