--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -108,7 +108,7 @@ const ogImage = new URL(image, Astro.site);
 
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-88QWX7FZE7"></script>
-    <script is:inline>
+    <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
